objects/nBRIDGER__OFAC_History__c.object
<CustomObject>
    <fields>
        <fullName>nBRIDGER__Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>OFAC_History</relationshipLabel>
        <relationshipName>OFAC_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nBRIDGER__OFAC_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OFAC_Request</label>
        <referenceTo>nBRIDGER__OFAC_Request__c</referenceTo>
        <relationshipLabel>OFAC_History</relationshipLabel>
        <relationshipName>OFAC_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nBRIDGER__Primary_Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Relationship</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>OFAC_History</relationshipLabel>
        <relationshipName>OFAC_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nBRIDGER__Product_Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Package</label>
        <referenceTo>LLC_BI__Product_Package__c</referenceTo>
        <relationshipLabel>OFAC_History</relationshipLabel>
        <relationshipName>OFAC_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nBRIDGER__Reason2__c</fullName>
        <description>Contains the reasons that this relationship was included in this OFAC search.</description>
        <label>Reason</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nBRIDGER__Reason__c</fullName>
        <description>--DEPRECATED-- Contains the reasons that this relationship was included in this OFAC search.</description>
        <label>-D Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>OFAC_History</label>
    <nameField>
        <label>OFAC_History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OFAC_History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>